--- a/estilos_cadastro.css
+++ b/estilos_cadastro.css
@@ -41,7 +41,7 @@ body {
 }
 
 a:hover.sair {
-    color: rgb(108, 214, 108);
+    color: red;
 }
 
 
@@ -52,7 +52,7 @@ a:hover.sair {
     height: 600px;
     overflow-y: auto;
     display: flex;
-    background-image: url("milharalsunset.jpg");
+    background-image: url("skyline.jpg");
     background-size: cover;
     background-position: 0px;
 }
@@ -62,16 +62,14 @@ a:hover.sair {
     width: 100%;
     height: 600px;
     display: flex;
-    background-color:rgb(0 0 0 / 56%);
+    background-color:rgba(0, 0, 0, 0.377);
     background-size: cover;
 }
 
 .banner .card {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.733);
     height: 513px;
     width: 542px;
-    border-radius: 60px;
-    margin: 23px 0px 0px 618px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -82,6 +80,7 @@ a:hover.sair {
 
 .inovacao {
     margin: -14px 0px 25px 0px;
+    color: white;
 }
 
 .banner .card1_1 {
@@ -105,7 +104,7 @@ button {
     margin: 36px 0px -8px 12px;
     height: 30px;
     width: 100px;
-    background-color: rgb(108, 214, 108);
+    background-color: red;
     border-radius: 6px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 15px;
