--- a/img/estilos_custom.css
+++ b/img/estilos_custom.css
@@ -78,20 +78,57 @@ a:hover.hover_login {
 
 .banner {
     margin: 0vh;
-    height: 86vh;
+    height: 58.3vh;
     padding: 0;
     overflow-y: auto;
     align-items: center;
 }
 
- .bannerdobanner {
-    margin: 0vh;
-    height: 86vh;
-    background-color: rgba(0, 0, 0, 0.767);
-    background-size: cover;
-    background-position: 0px;
-    overflow-y: auto;
+.div_title_votacao {
+    width: 100%;
+    display: flex;
     align-items: center;
+    justify-content: center;
+
+}
+
+.title_votacao {
+    color: white;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 5vh;
+    background-color: rgb(63, 63, 63);
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.caixa_votacao {
+    width: 100%;
+    height: 250px;
+    /*margin-left: 4.2%;
+    margin-right: 5%;
+    margin-top: 10px;*/
+    display: flex;
+
+}
+
+.cxcarro {
+    height: 328px;
+}
+
+.caixa_votacao2 {
+    width: 100%;
+    height: 250px;
+    /*margin-left: 4.2%;
+    margin-right: 5%;
+    margin-top: 10px;*/
+    display: flex;
+    justify-content: right;
+
+}
+
+.cxcarro2 {
+    height: 331px;
 }
 
 .mensagem {
@@ -105,7 +142,7 @@ a:hover.hover_login {
 
 .banner2 {
     margin: 0;
-    height: 86vh;
+    height: 53vh;
     background-color: rgb(0, 0, 0);
     background-size: cover;
     display: flex;
@@ -136,7 +173,7 @@ a:hover.hover_login {
 
 .banner3 {
     margin: 0vh;
-    height: 80vh;
+    height: 52.6vh;
 }
 
 .container3 {
